# scs

./: .gitignore  Cargo.toml  flake.nix  readme.md
.github/workflows/: check.yml
scripts/: demo.ipynb  from_anndata.py  from_seurat.r  seurat.r
src/: main.rs
