[package]
name = "scs"
version = "0.1.0+initial"
edition = "2021"
repository = "https://github.com/namemcguffin/scs"

[dependencies]
anyhow = "^1.0"
colorous = "^1.0"
futures = "^0.3"
macroquad = "^0.4"
nucleo = "^0.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dist]
inherits = "release"

[workspace.metadata.dist]
cargo-dist-version = "0.19.1"
ci = "github"
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
dist = true
